# libgme

./: .gitignore  CMakeLists.txt
demo/: CMakeLists.txt  Castlevania 3 - Dracula's Curse [Akumajou Densetsu] (1989-12-22)(Konami).n2m  Contra [Probotector] (1988-02-09)(Konami).n2m  Wave_Writer.cpp  basics.c  cpp_basics.cpp  out.mid  solstice.n2m
gme/: CMakeLists.txt  Gbs_Emu.h  Gym_Emu.h  Music_Emu.cpp  Music_Emu.h  Nes_Apu.cpp  Nes_Apu.h  Nes_Oscs.cpp  Nes_Oscs.h  Nsf_Emu.cpp  Nsf_Emu.h  Nsfe_Emu.cpp  Nsfe_Emu.h  Snes_Spc.cpp  Snes_Spc.h  Spc_Dsp.cpp  Spc_Dsp.h  Spc_Emu.cpp  Spc_Emu.h  Vgm_Emu.h  gme.cpp
nsf2midi/: CMakeLists.txt  Solstice - The Quest for the Staff of Demnos [Solstice - Sanjigen Meikyuu no Kyoujuu] (1990-07-20)(Software Creations)(CSG Imagesoft).n2m  nsf2midi.cpp
nsf2midi/nes/: Battletoads (1991-06)(Rare)(Tradewest).n2m  Blaster Master [Chou Wakusei Senki - Metafight] (1988-06-17)(Sunsoft).n2m  StarTropics (1990-12)(Nintendo IRD)(Nintendo).n2m  Super C [Super Contra] [Probotector II - Return of the Evil Forces] (1990-02-02)(Konami).n2m  Super Mario Bros. 3 (1988-10-23)(Nintendo EAD)(Nintendo).n2m
nsf2midi/snes/F-Zero (EMU).zophar/: 02 Big Blue.n2m  09 Mute City.n2m  12 Ending Theme.n2m
nsf2midi/snes/Jurassic Park (EMU).zophar/: 03 Raptor Rap.n2m  04 Gallimimus Gallop.n2m  05 Triceratops Trot.n2m
nsf2midi/snes/Super Mario World (EMU).zophar/: 11a Overworld.n2m  (+1 more)
nsf2midi/zelda3/: 08 Hyrule Field Main Theme.n2m  21 Dark Golden Land.n2m  22a Black Mist.n2m  31 Staff Roll.n2m
player/: Audio_Scope.cpp  Audio_Scope.h  CMakeLists.txt  player.cpp
(+1 files in other folders)
